<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GenerateActivity">

    <ImageView
        android:id="@+id/idIVQrcode"
        android:layout_width="190dp"
        android:layout_height="192dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:contentDescription="@string/qr_code"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/generateBtn"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="68dp"
        android:text="@string/GenerateQrCodeButton" />

    <TextView
        android:id="@+id/textInventoryType"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:gravity="center"
        android:text="@string/inventory_type" />

    <EditText
        android:id="@+id/editTextInventoryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textSerialId"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/textInventoryType"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:gravity="center"
        android:text="@string/serial_id" />

    <TextView
        android:id="@+id/textModelName"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/textSerialId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:gravity="center"
        android:text="@string/model_name" />

    <TextView
        android:id="@+id/textOwnerName"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/textModelName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:gravity="center"
        android:text="@string/owner_name" />

    <TextView
        android:id="@+id/textOwnerContact"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/textOwnerName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:gravity="center"
        android:text="@string/owner_contact" />

    <TextView
        android:id="@+id/textOwnerKUID"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/textOwnerContact"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:gravity="center"
        android:text="@string/owner_kuid" />

    <EditText
        android:id="@+id/editTextOwnerKUID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextOwnerContact"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextSerialId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextInventoryType"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextModelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSerialId"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextOwnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextModelName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextOwnerContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextOwnerName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_toStartOf="@+id/editTextInventoryType"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textQrOutput"
        android:layout_width="179dp"
        android:layout_height="212dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/idIVQrcode"
        android:gravity="center"
        android:text="" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/teal_700"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>